--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.40"
+env_logger = "0.11.8"
+log = "0.4.27"
 regex = "1.11.1"
 serde_json = "1.0.140"
