--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 
 [dependencies]
 chrono = "0.4.40"
+clap = { version = "4.5.38", features = ["derive"] }
 env_logger = "0.11.8"
 log = "0.4.27"
 regex = "1.11.1"
