--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 [dependencies]
 chrono = "0.4.40"
 clap = { version = "4.5.38", features = ["derive"] }
+dotenv = "0.15.0"
 env_logger = "0.11.8"
 log = "0.4.27"
 regex = "1.11.1"
