--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ dotenv = "0.15.0"
 env_logger = "0.11.8"
 log = "0.4.27"
 regex = "1.11.1"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
