--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2024"
 [dependencies]
 chrono = "0.4.40"
 clap = { version = "4.5.42", features = ["derive"] }
-dotenv = "0.15.0"
+dotenvy = "0.15.7"
 env_logger = "0.11.8"
 log = "0.4.27"
 regex = "1.11.1"
-serde = { version = "1.0.219", features = ["derive", "rc"] }
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-config = "0.2.2"
