--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitflags = "2.9.2"
 chrono = "0.4.40"
 clap = { version = "4.5.42", features = ["derive"] }
 dotenvy = "0.15.7"
