--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2024"
 bitflags = "2.9.2"
 chrono = "0.4.40"
 clap = { version = "4.5.42", features = ["derive"] }
+clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
 dotenvy = "0.15.7"
 env_logger = "0.11.8"
 log = "0.4.27"
@@ -17,5 +18,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 tabled = "0.20.0"
 tracing = { version = "0.1.41", features = ["log"] }
-tracing-config = "0.2.2"
 tracing-subscriber = "0.3.19"
