--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "ImprovedLurk"
+name = "ZeldaServer"
 version = "1.0.0"
 edition = "2024"
+authors = ["The24Kings"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
