--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ dotenvy = "0.15.7"
 env_logger = "0.11.8"
 indoc = "2.0.6"
 log = "0.4.27"
-lurk_lcsc = { version = "2.3.3", features = ["commands", "tracing"] }
+lurk_lcsc = { version = "2.3.5", features = ["tracing"] }
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = "1.0.142"
