--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,24 +3,21 @@ name = "ZeldaServer"
 version = "1.0.0"
 edition = "2024"
 authors = ["The24Kings"]
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
 
 [dependencies]
 bitflags = "2.9.2"
-chrono = "0.4.40"
-clap = { version = "4.5.42", features = ["derive"] }
+chrono = "0.4.42"
+clap = { version = "4.5.49", features = ["derive"] }
 clap-verbosity-flag = { version = "3.0.3", default-features = false, features = [
     "tracing",
 ] }
 dotenvy = "0.15.7"
 env_logger = "0.11.8"
 indoc = "2.0.6"
-log = "0.4.27"
-lurk_lcsc = { version = "2.3.5", features = ["tracing"] }
-regex = "1.11.1"
+lurk_lcsc = { version = "2.3.7", features = ["tracing"] }
+regex = "1.12.2"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = "1.0.142"
-tabled = "0.20.0"
 tracing = { version = "0.1.41", features = ["log"] }
 tracing-subscriber = "0.3.19"
