--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,19 @@ authors = ["The24Kings"]
 license = "MIT"
 
 [dependencies]
-bitflags = "2.9.2"
+bitflags = "2.10.0"
 chrono = "0.4.42"
-clap = { version = "4.5.49", features = ["derive"] }
+clap = { version = "4.5.50", features = ["derive"] }
 clap-verbosity-flag = { version = "3.0.3", default-features = false, features = [
     "tracing",
 ] }
 dotenvy = "0.15.7"
 env_logger = "0.11.8"
 indoc = "2.0.6"
-lurk_lcsc = { version = "2.3.8", features = ["tracing"] }
+lurk_lcsc = { version = "2.3.9", features = ["tracing"] }
 regex = "1.12.2"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = "1.0.142"
+time = { version = "0.3.44", features = ["formatting", "local-offset"] }
 tracing = { version = "0.1.41", features = ["log"] }
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "time"] }
